--- a/public/user.html
+++ b/public/user.html
@@ -142,11 +142,11 @@
                         
                         	
                               <div class="form-group">
-                                <label>Trenutno vrijeme</label>
+                                <label>Korisničko ime</label>
                                 <input class="form-control"  id="user_name" placeholder="Korisničko ime">
                               </div>
 							  <div class="form-group">
-                                <label>Trenutno vrijeme</label>
+                                <label>Lozinka</label>
                                 <input class="form-control"  id="user_pass" placeholder="Lozinka">
                               </div>
                               <hr>
