--- a/public/index.html
+++ b/public/index.html
@@ -53,16 +53,26 @@
 	<body class="royal_loader">
 
 		<div class="body">
-			<header id="header">
+			<header id="header" class="flat-menu clean-top">
+			<div class="header-top">
+					<div class="container">
+						<p>
+							Get in touch! <span><i class="fa fa-phone"></i>(123) 456-7890</span> | <a href="#">mail@domain.com</a>
+						</p>
+						<ul class="social-icons">
+							<li class="facebook"><a href="http://www.facebook.com/" target="_blank" title="Facebook">Facebook</a></li>
+							<li class="twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter">Twitter</a></li>
+							<li class="linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin">Linkedin</a></li>
+						</ul>
+					</div>
+				</div>
 				<div class="container">
 					<div class="logo">
 						<a href="index">
 							<img alt="AF" width="73" height="73" data-sticky-width="50" data-sticky-height="50" src="home/img/favicon/favicon.png">
 						</a>
 					</div>
-					<div class="search">
-					<!-- Placeholder -->
-					</div>
+					<!--
 					<ul class="social-icons">
 						<li class="facebook"><a href="http://www.facebook.com/" target="_blank" data-placement="bottom" data-tooltip title="Facebook">Facebook</a></li>
 						<li class="twitter"><a href="http://www.twitter.com/" target="_blank" data-placement="bottom" data-tooltip title="Twitter">Twitter</a></li>
@@ -74,7 +84,7 @@
 								<span><i class="fa fa-phone"></i>(+385) 098 948 7820</span>
 							</li>
 						</ul>
-					</nav>
+					</nav>-->
 					<button class="btn btn-responsive-nav btn-inverse" data-toggle="collapse" data-target=".nav-main-collapse">
 						<i class="fa fa-bars"></i>
 					</button>
@@ -120,10 +130,10 @@
 													<div class="col-md-6">
 														<ul class="list-account-options">
 															<li>
-																<a style="line-height: 10px;" href="timeline">Upravljačka ploča</a>
+																<a style="line-height: 10px; color:#333;" href="timeline">Upravljačka ploča</a>
 															</li>
 															<li>
-																<a href="logout">Odjava</a>
+																<a style="color:#333;" href="logout">Odjava</a>
 															</li>
 														</ul>
 													</div>
@@ -441,7 +451,7 @@
 									 data-y="260"
 									 data-speed="500"
 									 data-start="2000"
-									 data-easing="easeOutExpo">Pondudite nam Vaše povjerenje.
+									 data-easing="easeOutExpo">Ponudite nam Vaše povjerenje.
 								</div>
 								<a class="tp-caption customin btn btn-lg btn-primary main-button" href="#proizvod"
 										data-x="230" data-hoffset="0"
