--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
 																<div class="row">
 																	<div class="form-group">
 																		<div class="col-md-12">
-																			<a class="pull-right" id="headerRecover" href="#">(Zaboravljena lozinka?)</a>
+																			<a class="pull-right wut" id="headerRecover" href="#">(Zaboravljena lozinka?)</a>
 																			<label>Lozinka</label>
 																			<input type="password" id="passwd" value="" class="form-control input-lg">
 																		</div>
