--- a/public/404.html
+++ b/public/404.html
@@ -18,9 +18,7 @@
 </head>
 <body>
 	<noscript>
-		<div id="noscript-warning">
-			Ova stranica radi SAVRŠENO samo ako Vam je uključen javascript.
-		</div>
+		Za potpuni i ispravan rad stranice potrebno je omogućiti javascript.
 	</noscript>
 	<div id="wrap">
 	<div id="wordsearch">
