--- a/public/email.html
+++ b/public/email.html
@@ -36,6 +36,9 @@
 	
 </head>
 <body ng-app>	
+	<noscript>
+		Za potpuni i ispravan rad stranice potrebno je omogućiti javascript.
+	</noscript>
     <!-- Preloader -->
     <div class="loading-container">
       <div class="loading">
