--- a/public/login-failed.html
+++ b/public/login-failed.html
@@ -20,7 +20,7 @@
 <body>
 <!-- Title-->
 <div class="pen-title">
-  <h1>AquaFeed<i class="icon icon-main-logo2"></i></h1>
+  <h1><a href="index">AquaFeed<i class="icon icon-main-logo2"></i></a></h1>
   <span><a><i class="fa fa-exclamation-triangle"></i> Nepostojeće korisničko ime ili lozinka.</a><br></span>
 </div>
 <!-- Form Module-->
@@ -44,9 +44,6 @@
       <input type="email" placeholder="Email Addresa"/>
       <button onclick="sendmail();">Prijavi se</button>
     </form>
-  </div>
-  <div class="cta">
-	<a href="index.html"><i class="fa fa-home"></i> Početna stranica</a>
   </div>
 </div>
 <script>
