--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
 
 <!-- Title-->
 <div class="pen-title">
-  <h1>AquaFeed<i class="icon icon-main-logo2"></i></h1>
+  <h1><a href="index">AquaFeed<i class="icon icon-main-logo2"></i></a></h1>
   <span><a><i class="fa fa-cogs"></i> Upravljačka ploča</a></span>
 </div>
 <!-- Form Module-->
@@ -47,9 +47,8 @@
       <button id="naruci">Prijavi se</button>
     </form>
   </div>
-  <div class="cta">
-	<a href="index"><i class="fa fa-home"></i> Početna stranica</a>
-  </div>
+  
+  
 </div>
 <script>
 $('.toggle').click(function(){
