--- a/public/log.html
+++ b/public/log.html
@@ -135,7 +135,7 @@
             <div class="page-header"><h3>Zapisnik <small>događanja</small></h3></div>
             <div class="row">
             	<div class="col-md-9">
-					<textarea id="log_area" class="wysihtml form-control" placeholder="Nema zapisa o hranjenju" style="height:500px; width:600px;" readonly> </textarea> 
+					<textarea id="log_area" class="wysihtml form-control" placeholder="Nema zapisa" style="height:500px; width:600px;" readonly> </textarea> 
                 </div>
             </div>
         </div>
