--- a/public/user.html
+++ b/public/user.html
@@ -151,10 +151,10 @@
                               </div>
                               <hr>
                               <div class="form-group no-margn">
-                                <button class="btn btn-success btn-block" type="button" onclick="save_info();">Spremi promjene!</button>
+                                <button class="btn btn-success btn-block" onclick="save_info();">Spremi promjene!</button>
                               </div>
                             
-                        
+   
                         </div>
                     </div>
                 </div>
