--- a/public/login-failed.html
+++ b/public/login-failed.html
@@ -30,7 +30,7 @@
   </div>
   <div class="form">
     <h2>Prijava</h2>
-    <form action="timeline">
+    <form action="login-auth">
       <input id="em" type="text" placeholder="Korisničko Ime"/>
       <input id="passwd" type="password" placeholder="Lozinka"/>
       <button onclick="login_cp();"><i class="fa fa-lock"></i> Prijava</button>
