--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
 		<!-- Basic -->
 		<meta charset="utf-8">
-		<title>AquaFeed</title>		
+		<title>AquaFeed | Početna</title>		
 		<meta name="keywords" content="AquaFeed, IoT, Arduino" />
 		<meta name="description" content="AquaFeed - IoT rješenje za Vaš akavariji">
 		<meta name="author" content="Alen Egredžija">
@@ -50,7 +49,7 @@
 		<![endif]-->
 
 	</head>
-	<body class="royal_loader">
+	<body id="main-div" class="royal_loader">
 		<noscript>
 			Za potpuni i ispravan rad stranice potrebno je omogućiti javascript.
 		</noscript>
@@ -69,11 +68,9 @@
 					</div>
 				</div>
 				<div class="container">
-					<div class="logo">
 						<a href="index">
-							<img alt="AF" width="73" height="73" data-sticky-width="50" data-sticky-height="50" src="home/img/favicon/favicon.png">
+							<i id="top-logo" class="icon icon-main-logo2"></i>
 						</a>
-					</div>
 					<button class="btn btn-responsive-nav btn-inverse" data-toggle="collapse" data-target=".nav-main-collapse">
 						<i class="fa fa-bars"></i>
 					</button>
@@ -465,7 +462,6 @@
 
 				<div class="home-intro">
 					<div class="container">
-
 						<div class="row">
 							<div class="col-md-8">
 								<p>
@@ -480,7 +476,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</section>
@@ -506,7 +501,7 @@
 					<hr/>
 					<div class="row">
 						<div class="col-md-6 push-top">
-							<img class="img-responsive" src="home/img/team/team-4.jpg" data-appear-animation="fadeInLeft">
+							<img class="img-responsive" src="home/img/sponsor/clevercloud.png" data-appear-animation="fadeInLeft">
 						</div>
 						<div class="col-md-6">
 							<h2 data-appear-animation="fadeInRight" class="push-top">Clever Cloud<i class="fa fa-copyright"></i></h2>
