--- a/public/errors.html
+++ b/public/errors.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>AquaFeed | Upravljačka ploča</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="control/images/favicon.ico">
 	<meta name="description" content="AquaFeed IOT Device Control Panel">
 	<meta name="author" content="Egredžija Alen">
 
