--- a/public/events.html
+++ b/public/events.html
@@ -134,7 +134,7 @@
         <div class="warper container-fluid">
             <div class="page-header"><h3>Tablica događaja <small>Ponavljaju se svakodnevno</small></h3></div>
                     
-                    <div class="panel panel-default">
+                    <div class="panel panel-default" style="width:750px;">
                         <div class="panel-heading">Događaji</div>
                         <div class="panel-body table-responsive">
                         <!-- Table -->
@@ -170,7 +170,7 @@
         </div>
         <!-- Warper Ends Here (working area) -->
         <footer class="container-fluid footer">
-        	Copyright &copy; 2015 <a href="index" target="_blank">AquaFeed</a>
+        	Copyright &copy; 2016 <a href="index" target="_blank">AquaFeed</a>
             <a href="#" class="pull-right scrollToTop"><i class="fa fa-chevron-up"></i></a>
         </footer>
     </section>
