--- a/public/user.html
+++ b/public/user.html
@@ -30,7 +30,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 	 <!-- JQuery v1.9.1 -->
-	<script src="control/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="control/js/jquery-1.12.1.js" type="text/javascript"></script>
     <script src="control/js/underscore-min.js" ></script>
 	<!-- Bootstrap -->
     <script src="control/js/bootstrap.min.js"></script>
@@ -60,6 +60,7 @@
 
             <div class="user text-center">
 				<a href="index"><img src="control/images/favicon.ico" class="img-circle" alt="..."></a> 
+				<h4 class="user-name">AquaFeed<h4>
             </div>
             <nav class="navigation">
             	<ul class="list-unstyled" id="navi">
@@ -121,9 +122,9 @@
         </header>
         <!-- Header Ends -->
        
-	   <div class="warper container-fluid">
+	   <div class="warper container-fluid bg">
             <div class="page-header"><h3>Postavke <small>korisničkog računa</small></h3></div>
-				<div class="col-md-4">
+				<div class="col-md-4" style="width:550px;">
 						<div class="panel panel-default">
 							<div class="panel-heading"><i class="fa fa-book"></i> Vaši osobni podaci</div>
 							<div class="panel-body">
@@ -154,7 +155,7 @@
 									</div>
 								</div>
 								<div id="new-email-show">
-									<div class="row" style="margin-left:2px; margin-right:2px; margin-top:17px;">
+									<div class="row" style="margin-left:2px; margin-right:2px; margin-top:17px; margin-bottom:17px;">
 										<div class="col-md-8">
 											<label>Novi kontakt e-mail</label>
 											<input type="text" class="form-control" onblur="checkemail()" id="new-email" placeholder="Nova e-mail adresa">
@@ -166,11 +167,7 @@
 									<!-- Save alert -->
 									<div id="alert-save-email-succes" class="alert alert-success alert-dismissible" role="alert">
 										<button type="button" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-										<strong>Uspješno ste promijenili Vašu kontakt e-mail adresu.</strong> Sljedeći korak je da provjerite poštu i pratite daljnje upute. 
-									</div>
-									<div id="alert-activate-email-succes" class="alert alert-success alert-dismissible" role="alert">
-										<button type="button" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-										<strong>Aktivacijski mail poslan.</strong> Sljedeći korak je da provjerite pretinac i pratite daljnje upute. 
+										<strong>Uspješno ste promijenili Vašu kontakt e-mail adresu.</strong><br>Sljedeći korak je da provjerite poštu i pratite daljnje upute. 
 									</div>
 									<div id="alert-save-email-error" class="alert alert-danger alert-dismissible" role="alert">
 										<button type="button" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -197,7 +194,7 @@
 							</div>	
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4" style="width:550px;">
 						<div class="panel panel-default">
 							<div class="panel-heading"><i class="fa fa-key"></i> Promjenite Vaše korisničko ime i lozinku</div>
 							<div class="panel-body">
@@ -269,7 +266,7 @@
     <div class="modal fade" id="modal-mail-not-activated" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header" style="">
+          <div class="modal-header bg" style="">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <h4 class="modal-title" style="color:#c9302c"><i class="fa fa-exclamation-triangle"></i> Kontakt mail</h4>
           </div>
