--- a/public/404.html
+++ b/public/404.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="control/css/404-style.css"/>
 	<link rel="stylesheet" href="home/css/myicon.css">
 	
-	<script type="text/javascript" src="control/js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="control/js/jquery-1.12.1.js"></script>
 	<script type="text/javascript" src="control/js/404.js"></script>
 	<script type="text/javascript" src="control/js/wordsearch-resize.js"></script>
 	
@@ -29,9 +29,9 @@
 		<p>Provjerite uneseni URL zbog pogrešaka i pokušajte ponovno.</p>
 		
 		<div id="navigation">
-			<a class="navigation" href="index.html">Početna</a>
-			<a class="navigation" href="index.html#onama">O nama</a>
-			<a class="navigation" href="index.html#kontakt">Kontakt</a>
+			<a class="navigation" href="index">Početna</a>
+			<a class="navigation" href="index#onama">O nama</a>
+			<a class="navigation" href="index#kontakt">Kontakt</a>
 		</div>
 	</div>
 	</div>
