--- a/public/timeline.html
+++ b/public/timeline.html
@@ -91,7 +91,7 @@
 			
 			<ul class="nav-toolbar small-screen">
 				<div class="logo-small small-screen"> 
-					<a href="/index"><span class="icon icon-main-logo2" style=""></span></a>	
+					<a href="/index"><span class="icon icon-main-logo2"></span> AquaFeed</a>	
 				</div>
                 <li class="dropdown apps-small"><a href="#" data-toggle="dropdown"><i class="fa fa-ellipsis-v"></i></a>
                 	<div class="dropdown-menu lg pull-right arrow panel panel-default arrow-top-right">
