--- a/public/timeline.html
+++ b/public/timeline.html
@@ -171,22 +171,7 @@
             
             	<div class="col-md-4 timeline">
 					<ul class="tmtimeline">
-						<li>
-							<time class="tmtime"><span>09:56</span></time>
-							<div class="tmicon icon-fishes"></div>
-							<div class="tmlabel">
-								<h2>1. Dnevno hranjenje</h2>
-								<p>Zahtjev poslan - <i class="status-icon glyphicon glyphicon-ok"></i><span class="right-status">Zahtjev odrađen - <i class="status-icon glyphicon glyphicon-ok"></i></span></p>
-							</div>
-						</li>
-						<li>
-							<time class="tmtime"><span>09:56</span></time>
-							<div class="tmicon icon-fishes"></div>
-							<div class="tmlabel">
-								<h2>2. Dnevno hranjenje</h2>
-								<p>Zahtjev poslan - <i class="status-icon glyphicon glyphicon-ok"></i><span class="right-status">Zahtjev odrađen - <i class="status-icon glyphicon glyphicon-ok"></i></span></p>
-							</div>
-						</li>
+						<!-- Vrijednosti iz backenda -->
                     </ul>
                 </div>
 
