--- a/public/login.html
+++ b/public/login.html
@@ -27,6 +27,7 @@
 		<link rel="stylesheet" href="home/css/glyphicon.css">
 		<link rel="stylesheet" href="home/css/font-awesome.css">
 		<link rel="stylesheet" href="home/css/myicon.css">
+		<link rel="stylesheet" href="home/css/logos.css">
 		
 		<!-- Google reCaptcha -->
 		<script src='https://www.google.com/recaptcha/api.js?hl=hr'></script>
@@ -38,7 +39,7 @@
 	<div class="row featured-boxes">
 		<div class="container">
 			<div class="login-header">
-				<a href="index"><i class="icon icon-main-logo2"></i></a>
+				<a href="index"><i class="logo logo-new-logo-inv"></i></a>
 				<p class="list__text">AquaFeed</p>
 			</div>
 			<div class="featured-box featured-box-secundary default info-content login">
