--- a/public/events.html
+++ b/public/events.html
@@ -227,6 +227,7 @@
 	<script src="control/js/login/segment.min.js"></script>
 	<script src="control/js/login/d3-ease.v0.6.js"></script>
 	<script src="control/js/login/letters.js"></script>
+	<script src="control/js/events/moment.js"></script>
 	<script src="control/js/socket.io.js"></script>
     <script src="control/js/jquery.nicescroll.min.js"></script>
     
