--- a/public/user.html
+++ b/public/user.html
@@ -366,6 +366,7 @@
 	<script src="control/js/login/d3-ease.v0.6.js"></script>
 	<script src="control/js/login/letters.js"></script>
 	<script src="control/js/user/chosen.jquery.js"></script>
+	<script src="control/js/events/moment.js"></script>
 
     <!-- Custom JQuery -->
 	<script src="control/js/control-main.js" type="text/javascript"></script>
