--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
 							<div class="row">
 								<div class="form-group">
 									<div class="col-md-12">
-										<a class="pull-right" href="#">(Zaboravljena lozinka?)</a>
+										<a class="pull-right" href="lost-password">(Zaboravljena lozinka?)</a>
 										<label>Lozinka</label>
 										<input type="password" id="passwd" value="" class="form-control input-lg" required>
 									</div>
@@ -76,7 +76,7 @@
 							Nažalost imali ste nekoliko neuspjelih pokušaja prijave. Molimo Vas da nam dokažete da ste ljudsko biće.
 						</div>
 						<div id="captcha">
-							<div class="g-recaptcha" data-sitekey="6LetbBcTAAAAAOZ7lysOR74EwCHB63s-W8k47gQW" data-callback="verifyCallback"></div>
+							<div class="g-recaptcha" data-sitekey="6LdmzyATAAAAAOgTxLhCq39lEHYqjeEqE6hq1KQz" data-callback="verifyCallback"></div>
 						</div>	
 						<!-- // -->
 						<div id="form-submits">
