--- a/public/404.html
+++ b/public/404.html
@@ -5,6 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>AquaFeed | 404</title>
 	<link rel="shortcut icon" href="control/images/favicon.ico">
+	<!-- Chrome, Firefox OS, Opera and Vivaldi -->
+	<meta name="theme-color" content="#0698CB">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#0698CB">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#0698CB">
 	<meta name="description" content="AquaFeed IOT Device Control Panel">
 	<meta name="author" content="Egredžija Alen">
 	
