--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
 		
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, user-scalable=no" />
+		
+		<!-- Chrome, Firefox OS, Opera and Vivaldi -->
+		<meta name="theme-color" content="#0698CB">
+		<!-- Windows Phone -->
+		<meta name="msapplication-navbutton-color" content="#0698CB">
+		<!-- iOS Safari -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="#0698CB">
 
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="home/vendor/bootstrap/bootstrap.css">
@@ -534,7 +541,22 @@
 					</div>
 				</div>
 			</section>
-			
+			<!-- Featured -->
+			<section class="download">
+					<div class="container">
+						<div class="row">
+							<div class="center">
+								<p class="lead">
+									<i class="fa fa-windows"></i><strong> Windows®</strong> korisnicima je dostupna i desktop aplikacija. 
+									<a data-appear-animation="fadeInLeft" href="installation-download" class="btn btn-lg btn-dwn btn-shadow" data-appear-animation="bounceIn">
+										Preuzmi <i style="font-size:16px;" class="fa fa-cloud-download"></i> 
+									</a>
+								<p>
+							</div>
+						</div>
+					</div>
+			</section>
+			<!-- / -->
 			<section id="platforma" class="platform">
 				<div class="container">
 					<div class="row center">
@@ -765,10 +787,10 @@
 				<div class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(home/img/parallax.jpg);">
 					<div class="container">
 						<div class="row center">
-							<a href="http://www.etfos.unios.hr/"><img style="float:none; display:inline-block; padding-bottom:35px;" data-appear-animation="bounceIn" class="img-responsive" src="home/img/sponsor/etfos.png" /></a>
+							<a href="http://www.etfos.unios.hr/"><img style="float:none; display:inline-block; padding-bottom:35px;" data-appear-animation="bounceIn" class="img-responsive" src="home/img/sponsor/ferit.png" /></a>
 							<div class="col-md-12">
 								<h2 class="short text-shadow big white bold"><strong>Naš generalni sponzor.</strong></h2>
-								<h3 class="lead white">Elektrotehnički fakultet u Osijeku.</h3>
+								<h3 class="lead white">Fakultet elektrotehnike, računarstva i informacijskih tehnologija Osijek.</h3>
 							</div>
 						</div>
 					</div>
