--- a/public/lost-password.html
+++ b/public/lost-password.html
@@ -10,6 +10,13 @@
 		
 		<!-- Mobile Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<!-- Chrome, Firefox OS, Opera and Vivaldi -->
+		<meta name="theme-color" content="#0698CB">
+		<!-- Windows Phone -->
+		<meta name="msapplication-navbutton-color" content="#0698CB">
+		<!-- iOS Safari -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="#0698CB">
 
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="home/vendor/bootstrap/bootstrap.css">
